--- a/_posts/2014-09-23-services-4.markdown
+++ b/_posts/2014-09-23-services-4.markdown
@@ -5,7 +5,7 @@ category: Services
 title: CONCEPTO GENERAL
 description: |
 ---
-**APOYO ESCOLAR Y/O PSICOPEDAGOGICO**
+**APOYO ESCOLAR Y/O PSICOPEDAGÓGICO**
 
 El apoyo escolar y/o psicopedagógico se ha diseñado con el objetivo de abordar plena y profesionalmente las necesidades del niño a nivel académico, prestando especial atención a las necesidades o dificultades que pueden influir en el correcto aprendizaje.
 
